test/execution-test-data/invalidconditionalflowyamltest/job_not_exist.flow
nodes:
  - name: jobB
    type: test
    config:
      fail: false
      seconds: 0
    condition: ${jobC:param} == 'foo'

    dependsOn:
      - jobA

  - name: jobA
    type: test
    config:
      fail: false
      seconds: 0
